packages/easy-coding-standard/tests/Error/ErrorCollector/SniffRunnerSource/warn-on-print-code.inc
<?php

// sample file to trigger WarnOnPrintSniff

print '';
